Fix bug: spacing and order

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,3 +12,9 @@ header {
     margin: 0;
     color: darkgreen;
 }
+.div1 {
+    width: 25%;
+    background-color: aquamarine;
+    margin: 7px;
+
+}
